--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "mongodb": "^3.6.3",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
   },
@@ -20,6 +21,7 @@
     "@types/cors": "^2.8.9",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.9",
+    "@types/mongodb": "^3.6.3",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.20",
     "@types/uuid": "^8.3.0",
