--- a/103/package.json
+++ b/103/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^14.14.19",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "emailjs-com": "^2.6.4",
     "firebase": "^8.2.3",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
