--- a/103/package.json
+++ b/103/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-simple-chatbot": "^0.6.1",
+    "react-yandex-share": "^1.0.7",
     "styled-components": "^5.2.1",
     "swiper": "^6.4.5",
     "typescript": "^4.1.3",
