--- a/103/package.json
+++ b/103/package.json
@@ -16,9 +16,11 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-firebaseui": "^4.1.0",
+    "react-loader-spinner": "^4.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-simple-chatbot": "^0.6.1",
+    "react-spinners": "^0.10.4",
     "react-yandex-share": "^1.0.7",
     "styled-components": "^5.2.1",
     "swiper": "^6.4.5",
